--- a/2_feature_engg.ipynb
+++ b/2_feature_engg.ipynb
@@ -270,7 +270,13 @@
     "                      'Driver_Alcohol', 'Driver_Age']\n",
     "\n",
     "# Define ordinal feature orders\n",
-    "time_categories = ['Morning', 'Afternoon', 'Evening', 'Night']\n"
+    "time_categories = ['Morning', 'Afternoon', 'Evening', 'Night']\n",
+    "\n",
+    "\n",
+    "# Add a derived feature that emphasizes alcohol risk more strongly\n",
+    "df['Alcohol_Risk_Factor'] = df['Driver_Alcohol'] * 3.0  # Amplify the alcohol effect\n",
+    "numerical_features.append('Alcohol_Risk_Factor')\n",
+    "\n"
    ]
   },
   {
@@ -363,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -392,11 +398,11 @@
        "      <th>Number_of_Vehicles_scaled</th>\n",
        "      <th>Driver_Alcohol_scaled</th>\n",
        "      <th>Driver_Age_scaled</th>\n",
+       "      <th>Alcohol_Risk_Factor_scaled</th>\n",
        "      <th>Time_of_Day_encoded</th>\n",
        "      <th>Weather_Foggy</th>\n",
        "      <th>Weather_Rainy</th>\n",
        "      <th>Weather_Snowy</th>\n",
-       "      <th>Weather_Stormy</th>\n",
        "      <th>...</th>\n",
        "      <th>Road_Type_Mountain Road</th>\n",
        "      <th>Road_Type_Rural Road</th>\n",
@@ -418,10 +424,10 @@
        "      <td>0.874829</td>\n",
        "      <td>-0.420703</td>\n",
        "      <td>0.509335</td>\n",
+       "      <td>-0.420703</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -442,8 +448,8 @@
        "      <td>-0.142088</td>\n",
        "      <td>-0.420703</td>\n",
        "      <td>0.373888</td>\n",
+       "      <td>-0.420703</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -466,10 +472,10 @@
        "      <td>0.366370</td>\n",
        "      <td>-0.420703</td>\n",
        "      <td>0.712504</td>\n",
+       "      <td>-0.420703</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -490,8 +496,8 @@
        "      <td>-0.142088</td>\n",
        "      <td>-0.420703</td>\n",
        "      <td>-0.641960</td>\n",
+       "      <td>-0.420703</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -514,10 +520,10 @@
        "      <td>3.925579</td>\n",
        "      <td>-0.420703</td>\n",
        "      <td>1.254290</td>\n",
+       "      <td>-0.420703</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -533,7 +539,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -544,19 +550,19 @@
        "3                1.284294           -0.335369                  -0.142088   \n",
        "4               -0.014732            3.981158                   3.925579   \n",
        "\n",
-       "   Driver_Alcohol_scaled  Driver_Age_scaled  Time_of_Day_encoded  \\\n",
-       "0              -0.420703           0.509335                  0.0   \n",
-       "1              -0.420703           0.373888                  3.0   \n",
-       "2              -0.420703           0.712504                  2.0   \n",
-       "3              -0.420703          -0.641960                  1.0   \n",
-       "4              -0.420703           1.254290                  0.0   \n",
+       "   Driver_Alcohol_scaled  Driver_Age_scaled  Alcohol_Risk_Factor_scaled  \\\n",
+       "0              -0.420703           0.509335                   -0.420703   \n",
+       "1              -0.420703           0.373888                   -0.420703   \n",
+       "2              -0.420703           0.712504                   -0.420703   \n",
+       "3              -0.420703          -0.641960                   -0.420703   \n",
+       "4              -0.420703           1.254290                   -0.420703   \n",
        "\n",
-       "   Weather_Foggy  Weather_Rainy  Weather_Snowy  Weather_Stormy  ...  \\\n",
-       "0            0.0            1.0            0.0             0.0  ...   \n",
-       "1            0.0            0.0            0.0             0.0  ...   \n",
-       "2            0.0            1.0            0.0             0.0  ...   \n",
-       "3            0.0            0.0            0.0             0.0  ...   \n",
-       "4            0.0            1.0            0.0             0.0  ...   \n",
+       "   Time_of_Day_encoded  Weather_Foggy  Weather_Rainy  Weather_Snowy  ...  \\\n",
+       "0                  0.0            0.0            1.0            0.0  ...   \n",
+       "1                  3.0            0.0            0.0            0.0  ...   \n",
+       "2                  2.0            0.0            1.0            0.0  ...   \n",
+       "3                  1.0            0.0            0.0            0.0  ...   \n",
+       "4                  0.0            0.0            1.0            0.0  ...   \n",
        "\n",
        "   Road_Type_Mountain Road  Road_Type_Rural Road  Road_Condition_Icy  \\\n",
        "0                      0.0                   0.0                 0.0   \n",
@@ -586,10 +592,10 @@
        "3                            0.0  \n",
        "4                            0.0  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,21 +606,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data shape: (598, 21)\n",
-      "Test data shape: (200, 21)\n",
+      "Train data shape: (598, 22)\n",
+      "Test data shape: (200, 22)\n",
       "\n",
       "Summary of processed features:\n",
-      "- 5 numerical features (standardized)\n",
+      "- 6 numerical features (standardized)\n",
       "- 1 ordinal features (encoded)\n",
       "- 15 one-hot encoded columns from 5 nominal features\n",
-      "Total feature count: 21\n"
+      "Total feature count: 22\n"
      ]
     }
    ],
@@ -648,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -669,20 +675,13 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Training And Model Selection"
    ]
   },
   {
@@ -694,213 +693,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##Create a Function to Evaluate Model\n",
-    "def evaluate_model(true, predicted):\n",
-    "    mae = mean_absolute_error(true, predicted)\n",
-    "    mse = mean_squared_error(true, predicted)\n",
-    "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
-    "    r2_square = r2_score(true, predicted)\n",
-    "    return mae, rmse, r2_square"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Regression\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.4492\n",
-      "- Mean Absolute Error: 0.4036\n",
-      "- R2 Score: 0.0378\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4615\n",
-      "- Mean Absolute Error: 0.4125\n",
-      "- R2 Score: -0.0143\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Lasso\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.4580\n",
-      "- Mean Absolute Error: 0.4195\n",
-      "- R2 Score: 0.0000\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4583\n",
-      "- Mean Absolute Error: 0.4197\n",
-      "- R2 Score: -0.0000\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Ridge\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.4492\n",
-      "- Mean Absolute Error: 0.4041\n",
-      "- R2 Score: 0.0377\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4598\n",
-      "- Mean Absolute Error: 0.4115\n",
-      "- R2 Score: -0.0069\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "K-Neighbors Regressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.4115\n",
-      "- Mean Absolute Error: 0.3448\n",
-      "- R2 Score: 0.1928\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4956\n",
-      "- Mean Absolute Error: 0.4120\n",
-      "- R2 Score: -0.1695\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Decision Tree\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.0000\n",
-      "- Mean Absolute Error: 0.0000\n",
-      "- R2 Score: 1.0000\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.6403\n",
-      "- Mean Absolute Error: 0.4100\n",
-      "- R2 Score: -0.9524\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Random Forest Regressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.1738\n",
-      "- Mean Absolute Error: 0.1522\n",
-      "- R2 Score: 0.8560\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4727\n",
-      "- Mean Absolute Error: 0.4194\n",
-      "- R2 Score: -0.0642\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Adaboost Regressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.4548\n",
-      "- Mean Absolute Error: 0.3881\n",
-      "- R2 Score: 0.0139\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4695\n",
-      "- Mean Absolute Error: 0.3996\n",
-      "- R2 Score: -0.0497\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Graident BoostRegressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.3653\n",
-      "- Mean Absolute Error: 0.3162\n",
-      "- R2 Score: 0.3636\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.4832\n",
-      "- Mean Absolute Error: 0.4239\n",
-      "- R2 Score: -0.1120\n",
-      "===================================\n",
-      "\n",
-      "\n",
-      "Xgboost Regressor\n",
-      "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.0294\n",
-      "- Mean Absolute Error: 0.0187\n",
-      "- R2 Score: 0.9959\n",
-      "----------------------------------\n",
-      "Model performance for Test set\n",
-      "- Root Mean Squared Error: 0.5412\n",
-      "- Mean Absolute Error: 0.4383\n",
-      "- R2 Score: -0.3946\n",
-      "===================================\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "## Beginning Model Training\n",
-    "models = {\n",
-    "    \"Linear Regression\": LinearRegression(),\n",
-    "    \"Lasso\": Lasso(),\n",
-    "    \"Ridge\": Ridge(),\n",
-    "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
-    "    \"Decision Tree\": DecisionTreeRegressor(),\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
-    "    \"Adaboost Regressor\":AdaBoostRegressor(),\n",
-    "    \"Graident BoostRegressor\":GradientBoostingRegressor(),\n",
-    "    \"Xgboost Regressor\":XGBRegressor()\n",
-    "   \n",
-    "}\n",
-    "\n",
-    "for i in range(len(list(models))):\n",
-    "    model = list(models.values())[i]\n",
-    "    model.fit(X_train, y_train) # Train model\n",
-    "\n",
-    "    # Make predictions\n",
-    "    y_train_pred = model.predict(X_train)\n",
-    "    y_test_pred = model.predict(X_test)\n",
-    "    \n",
-    "    # Evaluate Train and Test dataset\n",
-    "    model_train_mae , model_train_rmse, model_train_r2 = evaluate_model(y_train, y_train_pred)\n",
-    "\n",
-    "    model_test_mae , model_test_rmse, model_test_r2 = evaluate_model(y_test, y_test_pred)\n",
-    "\n",
-    "    \n",
-    "    print(list(models.keys())[i])\n",
-    "    \n",
-    "    print('Model performance for Training set')\n",
-    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_train_rmse))\n",
-    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_train_mae))\n",
-    "    print(\"- R2 Score: {:.4f}\".format(model_train_r2))\n",
-    "\n",
-    "    print('----------------------------------')\n",
-    "    \n",
-    "    print('Model performance for Test set')\n",
-    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_test_rmse))\n",
-    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_test_mae))\n",
-    "    print(\"- R2 Score: {:.4f}\".format(model_test_r2))\n",
-    "    \n",
-    "    print('='*35)\n",
-    "    print('\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Initialize few parameter for Hyperparamter tuning\n",
-    "\n",
-    "rf_params = {\"max_depth\": [5, 8, 15, None, 10],\n",
-    "             \"max_features\": [5, 7, \"auto\", 8],\n",
-    "             \"min_samples_split\": [2, 8, 15, 20],\n",
-    "             \"n_estimators\": [100, 200, 500, 1000]}\n",
-    "\n",
-    "xgboost_params = {\"learning_rate\": [0.1, 0.01],\n",
-    "                  \"max_depth\": [5, 8, 12, 20, 30],\n",
-    "                  \"n_estimators\": [100, 200, 300],\n",
-    "                  \"colsample_bytree\": [0.5, 0.8, 1, 0.3, 0.4]}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
